# Frame

./: .gitignore  Cargo.toml  LICENSE  PLAN-VSCODE-EXTENSION.md  README.md  build.rs
.cargo/: config.toml
assets/icons/: default.frameicons
examples/blog-app/: .gitignore  README.md  frame.config.json
examples/blog-app/.frame-cache/: hashes.json
examples/blog-app/assets/icons/: default.frameicons
examples/blog-app/src/: project.fr
examples/blog-app/src/controllers/: AuthController.fr  PostController.fr  UserController.fr
examples/blog-app/src/models/: AuthStore.fr  Post.fr  PostStore.fr  User.fr  UserObj.fr  UserStore.fr
examples/blog-app/src/tests/: AuthStore.test.fr  PostStore.test.fr  UserStore.test.fr  api.test.fr  navigation.test.fr
examples/blog-app/src/views/components/: PostCard.fr  UserCard.fr
examples/profile/: .gitignore  README.md  frame.config.json
examples/profile/.frame-cache/: hashes.json
examples/profile/src/: project.fr
examples/profile/src/tests/: AppStore.test.fr  AuthStore.test.fr  PostStore.test.fr  UserStore.test.fr  api.test.fr  app.test.fr
frame-docs/: blog-app.html  book.toml  features.html
frame-docs/src/: SUMMARY.md  app-icons.md  architecture.md  cli-reference.md  contributing.md  getting-started.md  icon-system.md  ide-support.md  introduction.md  lsp-server.md  path-aliases.md  plugin-system.md
frame-docs/src/component-reference/: feedback.md  gesture.md  input.md  layout.md  media.md  navigation.md  overview.md  plugin.md  text-content.md
frame-docs/src/language-guide/: animations.md  app-lifecycle.md  components.md  conditionals-loops.md  enums-type-aliases.md  events-lifecycle.md  fetch.md  functions.md  imports.md  logging.md  named-arguments.md  navigation.md  overview.md  pages.md  project-structure.md  standard-library.md  store.md  string-interpolation.md  styles.md  testing.md  validation.md  variables.md
frame-docs/theme/: custom.css
frame-syntax/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  vsc-extension-quickstart.md
frame-syntax/fileicons/: frame-icon-theme.json
frame-syntax/snippets/: frame.code-snippets
frame-syntax/src/: app-icon-manager.ts  commands.ts  completion-provider.ts  decorations.ts  extension.ts  file-decorations.ts  icon-picker.ts  import-manager.ts  side-panel.ts  status-bar.ts
frame-syntax/syntaxes/: frame.tmLanguage.json
my-frame-app/: Cargo.toml
my-frame-app/src/: project.fr
my-frame-app/src/component/: Card.fr  Cardreal.fr
my-frame-app/src/pages/: profile.fr
src/: frame.pest  lib.rs  main.rs
src/cli/: build.rs  check.rs  deploy.rs  font.rs  icon.rs  icon_bundle.rs  icon_gen.rs  lint.rs  mod.rs  plugin.rs  preview.rs  start.rs  test_runner.rs
src/compiler/: android.rs  icon_generator.rs  ios.rs  mod.rs  overflow.rs  pretty.rs  registry.rs  validation.rs
src/components/: mod.rs
src/icons/: mod.rs
src/lsp/: capabilities.rs  diagnostics.rs  mod.rs  server.rs
src/parser/: ast.rs  frame.pest  grammar.pest  mod.rs
src/plugins/: mod.rs
src/resolver/: mod.rs  types.rs
src/runtime/: animation.rs  canvas.rs  mod.rs  navigation.rs  plugins.rs  responsive.rs  shader.wgsl  ssr.rs  state.rs  store.rs
src/stdlib/: mod.rs
src/styles/: mod.rs
src/testing/: mod.rs
(+21 files in other folders)
